[package]
name = "aoc-2022-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[profile.test]
#opt-level = 3

[dependencies]
ndarray = "0.15"
itertools = "0.10"
regex = "1"
num = "0.4"
evalexpr = "8.1"
nom = "7.1.1"
